[package]
name = "ascii_help"
version = "0.1.0"
edition = "2021"
description = "A simple tool to help you quickly convert ASCII codes"
license = "MIT"
authors = ["Adhyan H.", "<adhyanpatel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
