cargo-features = ["codegen-backend"]
[package]
name = "ascii_help"
version = "0.2.0"
edition = "2021"
description = "A simple tool to help you quickly convert ASCII codes"
license = "MIT"
authors = ["Adhyan H.", "<adhyanpatel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

